--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "copy-types": "node ./copy-types.js",
     "jest": "jest",
     "lint": "eslint sample src test --ext .jsx,.js",
-    "postinstall": "husky install",
     "prepack": "yarn clean && yarn build",
     "prettier": "prettier --check . --cache",
     "test": "yarn lint && yarn prettier && yarn jest"
@@ -38,7 +37,7 @@
     "get-user-locale": "^1.2.0",
     "make-event-props": "^1.1.0",
     "prop-types": "^15.6.0",
-    "react-calendar": "^4.0.0",
+    "react-calendar": "git+https://github.com/sushant-metaversity/react-calendar.git",
     "react-fit": "^1.4.0",
     "update-input-width": "^1.2.2"
   },
